# proj_01

./: .gitignore  CMakeLists.txt  animilk.cc  animilk.qrc  first.cc  first.h
